Fixed carousel scaling on mobile

--- a/src/app/Components/carousel-widget/carousel-widget.component.scss
+++ b/src/app/Components/carousel-widget/carousel-widget.component.scss
@@ -8,6 +8,7 @@
     width: 100%;
     overflow: hidden;
     border-radius: 0.5em;
+    margin: auto;
 }
 
 .slide {
@@ -15,7 +16,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
+    margin: auto;
     object-fit: cover;
     // zoom effect on hover
     transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
