--- a/src/app/Components/home/home.component.scss
+++ b/src/app/Components/home/home.component.scss
@@ -1,9 +1,18 @@
 .carousel-container {
     display: block;
-    width: 394px;
+    width: 290px;
     padding: 0em 2em;
     margin: auto;
 }
+
+@media only screen and (min-width: 420px) {
+    .carousel-container {
+        display: block;
+        width: 394px;
+        padding: 0em 2em;
+        margin: auto;
+    }
+  }
 
 .home-colour {
     background: lavenderblush;
